Fix z-index on modal headers

--- a/static/less/mixins/modal.less
+++ b/static/less/mixins/modal.less
@@ -48,6 +48,7 @@
             padding: 0;
             text-align: center;
             overflow: visible;
+            z-index: initial;
 
             &:before {
                 background: none;
